k8s-manifests/backend-deployment.yaml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-backend
  namespace: flask-app
  labels:
    app: flask-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-backend
  template:
    metadata:
      labels:
        app: flask-backend
    spec:
      containers:
        - name: backend
          image: mdzahid786/flask-app-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: backend-data
              mountPath: /data # Thid is the path of container inner storage
          # Liveness/readiness probes (adjust paths if needed)
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: backend-data
          persistentVolumeClaim:
            claimName: backend-storage
